fix: Create a unmodifiable view only once